--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "tailwind-run": "npx tailwindcss-cli -i ./src/style.css -o ./dist/css/wp-backup.bundle.css --minify --watch",
     "mix-watch": "npx mix watch",
     "dev": "run-p tailwind-run mix-watch",
-    "build": "npx mix --production"
+    "build": "npx mix --production",
+    "build:package": "node ./build-package.js"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.27.1",
+    "archiver": "^7.0.1",
     "autoprefixer": "^10.4.21",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.5.6",
